# 3DSR

./: .gitignore  CMakeLists.txt  README.md
ext/: tiny_obj_loader.h
src/: color.h  face.h  frame.cpp  frame.h  graphics.h  main.cpp  mat4.cpp  mat4.h  matrix4.h  mesh.cpp  mesh.h  object.cpp  object.h  polygon.h  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h  texture.cpp  texture.h  utils.cpp  utils.h  vec2.h  vec3.h  vec4.h  vector4.h  vertex.h  world.cpp  world.h
src/shaders/: gouraud_shader.h  phong_shader.h  shader.h
